# cobwebs-2024

./: Cargo.toml
examples/: miserables.rs  scales.json  scales.rs  scales2.json  scales3.json  scales4.json
src/: crossings.rs  grid_wanderer.rs  lib.rs  swapper.rs
